# Devoir-1-conom-trie

./: Code final Devoir 1.ipynb  Probleme 3.ipynb  Problème 2 avec Yahoo.ipynb  Problème 2.ipynb  Problème 2.md  Problème 4.ipynb  Problème 4.md  README.md  donnees_probleme2.csv  donnees_yahoo_probleme2.csv  pyproject.toml  pyproject.toml.bak  pyproject.toml.bak2  question 3e).ipynb
donnees_individuelles/: EA_75828.csv  EFX_52476.csv  EOG_75825.csv  GNW_90162.csv  GOOGL_90319.csv  GTE_92619.csv  JBL_79094.csv  JKS_93380.csv  JPM_47896.csv  SPY_84398.csv
donnees_individuelles_yahoo/: EA.csv  EFX.csv  EOG.csv  GNW.csv  GOOGL.csv  GS.csv  GTE.csv  JBL.csv  JKS.csv  JPM.csv  SPY.csv
