[project]
name = "devoir-1-conom-trie"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Jean-Simon Laverdière", email = "you@example.com" }]

dependencies = [
    "numpy>=1.20",
    "pandas>=2.0,<2.4",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "statsmodels>=0.12",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "jupyter>=1.0",
    "wrds>=3.4.0",
    "ipykernel>=6.0",
    "yfinance (>=0.2.66,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false




